--- a/order_consumer/src/main/resources/application.properties
+++ b/order_consumer/src/main/resources/application.properties
@@ -5,4 +5,7 @@ eureka.client.register-with-eureka=false
 spring.freemarker.suffix=.html
 spring.freemarker.request-context-attribute=request
 spring.resources.static-locations=classpath:/templates/,classpath:/static/
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=1000MB
+
 
